# cuttlefish

./: .gitignore  README.md  client.py  ens_register_only.py  job_schema.py  package-lock.json  package.json  pyproject.toml  test_delegate.py  worker.py
.devcontainer/: devcontainer.json  setup-openclaw-skill.sh
agentpay/: .gitignore  __init__.py  adjudicator.py  cli.py  eas.py  ens.py  ens2.py  faucet.py  flow.py  llm_task.py  pyproject.toml  schema.py  tools.py  wallet.py
agentpay/examples/: register_ens.py  test_all_features.py  test_register_and_provision.py  two_agents_demo.py  worker_server.py  yellow_e2e.py
agentpay/payments/: __init__.py  circle_arc.py  onchain.py  yellow.py
autonomous_adapter/: README.md  __init__.py  demo_config.py  demo_feed_server.py  feed_client.py  parse_agentpay_intent.py  run_loop.py  trigger_agentpay.py  watch_moltbook.py
scripts/: run-openclaw.sh
skills/: README.md
skills/agentpay/: SKILL.md
yellow_mvp/scripts/: close-all.ts
yellow_test/: .env.example  bridge.ts  package-lock.json  package.json  test_bridge.py  tsconfig.json
yellow_test/scripts/: close-all-app-sessions.ts  request-faucet.ts
yellow_test/steps/: step1-connect.ts  step2a-auth-request.ts  step2b-auth-verify.ts  step3-ledger-balances.ts  step4a-create-channel.ts  step4b-resize-channel.ts  step4c-transfer.ts  step4d-close-channel.ts  step5a-create-app-session.ts  step5b-get-app-sessions.ts  step5c-submit-app-state.ts  step5d-two-parties.ts  step5e-escrow-state.ts  step5f-close-app-session.ts
