[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuttlefish"
version = "0.1.0"
description = "Cuttlefish: agentpay SDK and tooling. Install agentpay with: pip install -e ./agentpay"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agentpay @ file:./agentpay",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
packages = []
