[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpay"
version = "0.1.0"
description = "DeFi rails for AI agents: delegate tasks, pay for work, attest receipts. For Moltbot/Moltbook agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "web3>=6.0",
    "eth-account>=0.10",
    "eth-abi>=4.0",
    "requests>=2.28",
    "eth-utils>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
agentpay = "agentpay.cli:main"
agentpay-setup = "agentpay.cli:setup_command"
agentpay-worker = "agentpay.cli:worker_command"

# Flat layout: package code lives in this directory (agentpay/), not in agentpay/agentpay/
[tool.setuptools]
packages = ["agentpay", "agentpay.payments"]
package-dir = {"agentpay": ".", "agentpay.payments": "payments"}
